refactor: добавил проверку на null в методах (getTask и т.д.) показывающих задачи в классе InMemoryTaskManager refactor: изменил ArrayList на LinkedList в классе InMemoryHistoryManager